# TVTelegramBingX

./: .env.example  README.md  config.py  ruff.toml  run.sh  sitecustomize.py  state.json
aiogram/: __init__.py  enums.py  filters.py  types.py
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  metrics.py  schemas.py  telemetry.py
backend/app/integrations/: telegram.py
backend/app/integrations/bingx/: __init__.py  auth.py  rest.py  synchronizer.py  websocket.py
backend/app/repositories/: __init__.py  balance_repository.py  bot_session_repository.py  order_repository.py  position_repository.py  signal_repository.py  user_repository.py
backend/app/services/: bingx_account_service.py  bot_control_service.py  order_service.py  signal_service.py
backend/tests/: conftest.py  test_app_https.py  test_bingx_integration.py  test_bot_api.py  test_bot_control_service.py  test_bot_handlers.py  test_end_to_end_signal_flow.py  test_repositories.py  test_webhook.py
bot/: __init__.py  backend_client.py  commands.py  config.py  handlers.py  keyboards.py  main.py  metrics.py  middleware.py  models.py  state.py  telegram_bot.py  telemetry.py  user_prefs.py
docs/: bingx_integration.md  deployment_guide.md  incident_response.md  installation_checklist.md  observability.md  runbook.md  security.md  telegram_bot_deployment.md  tradingview_alert_examples.md
fastapi/: __init__.py  responses.py  testclient.py
httpx/: __init__.py
integrations/: __init__.py  bingx_client.py  bingx_constants.py  bingx_contracts.py  bingx_errors.py  bingx_guards.py  bingx_orders.py  bingx_quote.py  bingx_settings.py  telegram_format.py
monitoring/: alerting-rules.yaml  otel-collector.yaml  prometheus.yaml
pinescripts/: ema_trend_crossover_filtered.pine  trend_signals_with_webhook.pine
scripts/: trading_flow_smoke_test.py
services/: __init__.py  idempotency.py  order_mapping.py  sizing.py  symbols.py  trade_params.py  trading.py
tests/: conftest.py  test_autotrade.py  test_bingx_client.py  test_command_parsing.py  test_config.py  test_dispatcher.py  test_dynamic_tp_monitor.py  test_freqtrade_config_migrator.py  test_idempotency.py  test_main.py  test_manual_trading.py  test_order_mapping.py  test_rate_limiting.py  test_report_formatting.py  test_schedule.py  test_sizing.py  (+10 more)
(+46 files in other folders)
