[project]
name = "tvtelegrambingx-backend"
version = "0.1.0"
description = "Backend services for the TVTelegramBingX project"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "pydantic-settings>=2.2",
    "aio-pika>=9.4",
    "asyncpg>=0.29",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-postgresql>=5.0",
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
