[project]
name = "tvtelegrambingx-backend"
version = "0.1.0"
description = "Backend services for the TVTelegramBingX project"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "pydantic-settings>=2.2",
    "aio-pika>=9.4",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "aiogram>=3.5",
    "httpx>=0.27",
    "websockets>=12.0",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-asyncpg>=0.48b0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-postgresql>=5.0",
    "psycopg2-binary>=2.9",
    "ruff>=0.4",
    "bandit>=1.7",
    "pip-audit>=2.6",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
